<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('block_resources', function (Blueprint $table) {
            $table->id();
            $table->foreignId('block_id')->unique()->constrained('lesson_blocks')->cascadeOnDelete();
            $table->json('links');
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('block_resources');
    }
};
